# langchain_deepseek_v4

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml  publish_testpypi.yml  test.yml
langchain_deepseek/: __init__.py
langchain_deepseek/chat_models/: __init__.py  _convert.py  _utils.py  base.py
langchain_deepseek/data/: __init__.py  _profiles.py
tests/integration_tests/: test_live_deepseek.py
tests/unit_tests/: test_chat_models.py
