[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain_deepseek_v4"
version = "0.1.0"
description = "LangChain integration package for DeepSeek chat models"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "openai>=1.99.0,<3.0.0",
    "pydantic>=2.7.4,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
]
build = [
    "build>=1.2.0,<2.0.0",
]

[project.urls]
Homepage = "https://api-docs.deepseek.com"
Repository = "https://github.com/hlcm/langchain_deepseek_v4"

[dependency-groups]
test = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
]
build = [
    "build>=1.2.0,<2.0.0",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: tests that call the live DeepSeek API",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_deepseek"]

[tool.hatch.build.targets.sdist]
include = [
    "langchain_deepseek",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "COM812", "PLR0913"]

[tool.ruff.format]
docstring-code-format = true
